# Excel-Translator-Formatting-Intact-with-LLMs

./: .gitignore  CLAUDE.md  ExcelTranslate.py  LICENSE  README.md  example.env  main.py  pyproject.toml  requirements.txt
excel_translator/: __init__.py  cli.py  translation.py  utils.py
excel_translator/providers/: __init__.py  base_provider.py  openai_provider.py
tests/: __init__.py  test_utils.py
